backoffice new reservation show available stock + stock listing include stock plate

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -1178,7 +1178,7 @@ admin_new_reservation:
   products_table:
     photo: Photo
     product: Producto
-    stock: Stock (disponible/total)
+    stock: Stock disponible (total)
     price: Precio
   extras_table:
     extra: Extra
