email notificacions configuration

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -47,6 +47,8 @@ booking_settings:
   form:
     title: Configuración General
     notification_email: Email de notificación
+    send_notifications: Envía notificaciones por email
+    send_notifications_new_reservations_from_backoffice: Envía notificaciones nueva reserva backoffice
     scheduler_start_time: Hora de inicio planificación
     scheduler_finish_time: Hora de fin planificación    
     booking_mode:
