--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -752,6 +752,8 @@ booking_category_management:
       label: Avisar al cliente si no hay reservas
     alias:
       label: Alias
+    request_customer_address:
+      label: Solicitar dirección del cliente
     request_customer_information:
       label: Solicitar datos de los participantes
     request_customer_document_id:
@@ -1169,4 +1171,15 @@ shopping_cart:
 booking_activities_scheduler:
   title: Agenda de actividades programadas
   pax: >
-       %1 plazas 
+       %1 plazas
+location:
+  location_title: Dirección
+  street: Calle
+  number: Número
+  complement: Complemento
+  city: Ciudad
+  state: Provincia
+  country: País
+  zip: Código postal
+  latitude: Latitud
+  longitude: Longitud
