update for customers pickup place

--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -1053,6 +1053,8 @@ booking_activity_management:
     total_capacity: Capacidad total
     duration_days: Duración en días
     duration_hours: Duración en horas
+    custom_pickup_places: Permite indicar lugares de recogida de clientes
+    pickup_places: Lugares de recogida de clientes
     occurrence: Frecuencia
     occurrence_one_time: Una vez (determinada por la empresa)
     occurrence_multiple_dates: Múltiples fechas (determinadas por la empresa)
@@ -1104,9 +1106,12 @@ activity:
   evenings: Noches
   dates: Seleccionar la fecha
   turns: Seleccionar el horario
+  pickup_place: Seleccionar lugar de recogida
+  choose_pickup_place: Seleccionar lugar de recogida
   tickets: Seleccionar los tickets
   choose_tickets: Número de tickets (%1)
   event_date: Fecha
+  no_pickup_place_selected: No ha seleccionado el lugar de recogida
   no_ticket_selected: No ha seleccionado tickets
   activity_not_available: Lo sentimos, no hay plazas disponibles. Por favor, consulte telefónicamente.
   activity_not_available_dates: Lo sentimos, no hay plazas disponibles en esta fecha. Por favor, consulte telefónicamente.
@@ -1125,6 +1130,8 @@ activity_checkout:
   order_summary: Resumen del pedido
   reservation_data: Datos de la reserva  
   activity_customers: Clientes de la actividad %1
+activity_shopping_cart:
+  pickup_customer: Recogida en %1
 activity_shopping_cart_summary:
   total: Total  
 report_stock:
