--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -49,20 +49,31 @@ booking_settings:
     title: Configuración General
     notifications: Notificaciones
     notification_email: Email de notificación
+    notification_email_description: Lista separada por comas de los correos electrónicos a las que se envían las notificaciones dirigidas al gestor de reservas
     send_notifications: Envía notificaciones por email
     send_notifications_backoffice_reservations: Envía notificaciones por mail (reservas del backoffice)
     business: Negocio
     multiple_rental_locations: Múltiples oficinas
+    multiple_rental_locations_description: El negocio tiene múltiples oficinas o centros de gestión. Las reservas de material o las actividades son gestionadas por un centro.
     scheduler_start_time: Hora de inicio planificación
     scheduler_finish_time: Hora de fin planificación    
     booking_mode:
       title: Modo
       rent: Alquiler
       restaurant: Restaurante
+    products:
+      title: Productos
+    reservation:
+      title: Reserva
     calendar_mode:
-      title: Modo calendario
-      default: Por defecto
-      first_day: Primer día    
+      title: Temporada(s) de la tarifa
+      default: Promedio de las temporadas afectadas
+      first_day: La fecha de inicio de la reserva determina la temporada
+    planning:
+      title: Planning y recursos
+    rates:
+      title: Cálculo de los precios
+      description: En el caso de que las tarifas sean por temporadas, determina la forma en la que se calculará el precio cuando las fechas de la reserva incluyen varias temporadas
     reservation_starts_with:
       title: Tipo formulario de reserva
       dates: Selección fechas (para 1 producto)
@@ -70,19 +81,24 @@ booking_settings:
       shoppingcart: Reserva múltiples productos
     assignation:
       allow_different_category: Permitir asignar diferentes categorías
+      allow_different_category_description: Permite que a una reserva pueda asignarse un recurso de diferente categoría, por ejemplo un coche de categoría superior
       allow_busy_resource: Permitir asignar recurso ocupado
     renting: Gestión de alquileres
     activities: Gestión de actividades o eventos
-    deposit: "% Depósito"
+    payments_allowed: Configuración de los pagos online (permitidos)
+    deposit: "Permitir paga y señal de la reserva (% sobre el total de la reserva)"
+    deposit_description: En el caso de que se quiera permitir recibir una cantidad en concepto de paga y señal, indicar el porcentaje. Utilizar 0 si sólo se desea recibir el pago total.
     allow_total_payment: Permitir pagar el total de la reserva
-    min_days: Numero mínimo de días    
+    min_days: Numero mínimo de días
+    min_days_description: Permite indicar el número mínimo de días que se puede alquilar un producto
     family: Tipo de producto en alquiler
+    family_description: El sistema está preparado para la gestión de determinados negocios en función del producto que alquilan.
     custom_pickup_return_place: Permitir otros lugares de entrega/recogida
     custom_pickup_return_place_price: Precio otro lugar de entrega/recogida
     no_pickup_return_timetable: No aplica
     pickup_return_timetable: Horario entrega/recogida
     pickup_return_timetable_out_price: Precio entrega/recogida fuera de horas
-    payment: Pago online
+    payment: Pago online habilitado
     morning_turns: Mañana
     afternoon_turns: Tarde 
     night_turns: Noche
@@ -96,7 +112,9 @@ booking_settings:
     max_adults: Número máximo de adultos
     max_adults_extra: Número máximo de adultos (extra)
     people_resources: Recursos para los clientes        
-    general_group: Datos básicos
+    general_group: General
+    notifications: Notificaciones
+    product_reservation_rates: Proceso de reserva
     pickup_return_group: Entrega y recogida    
     payment_group: Pago online
     adwords_group: Adwords
@@ -104,8 +122,10 @@ booking_settings:
     people_group: Gente   
     rent_group: Alquiler
     activities_group: Actividades 
-    item_hold_time: Caducidad (en horas) de la reserva
-    payment_cadence: Cadencia de pago
+    item_hold_time: Caducidad de la reserva (en horas)
+    item_hold_time_description: Número de horas desde la recepción de la reserva durante las cuales se puede realizar el pago (parcial o total) para confirmar la reserva. Pasado este tiempo no se podrá realizar el pago de la reserva a no ser que se habilite explícitamente para la reserva.
+    payment_cadence: Cadencia de pago (en horas)
+    payment_cadence_description: Número de horas que han de haber desde la fecha en la que se realiza la reserva hasta la fecha de inicio de la reserva para permitir el pago online. El cliente sólo podrá realizar una solicitud de reserva, pero no confirmarla.
     activities_request_reservation: Permitir solicitar reserva    
     activities_payment: Permitir pago online
     activities_deposit: "% depósito"
@@ -494,7 +514,8 @@ booking_management:
   print_contract: Imprimir contrato
   print_contract_short: Contrato
   table:
-    id: Id
+    rental_location: Centro
+    id: Localizador
     creation_date: Fecha recepción
     customer: Cliente
     status: Estado
@@ -1412,8 +1433,10 @@ booking_rental_locations_management:
   title: Oficinas
   description: Oficinas de alquiler/actividades
   table:
-    id: Identificador
+    code: Código
     name: Nombre
   form:
+    code:
+      label: Código
     name:
       label: Nombre
