--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -47,12 +47,15 @@ booking_configuration_templates:
 booking_settings:
   form:
     title: Configuración General
+    online_payment: Pago online
+    planning_resources: Planning y recursos
     notifications: Notificaciones
+    notificacion_smtp_setup: Configuración SMTP
     notification_email: Email de notificación
     notification_email_description: Lista separada por comas de los correos electrónicos a las que se envían las notificaciones dirigidas al gestor de reservas
     send_notifications: Envía notificaciones por email
     send_notifications_backoffice_reservations: Envía notificaciones por mail (reservas del backoffice)
-    business: Negocio
+    business: Otros
     multiple_rental_locations: Múltiples oficinas
     multiple_rental_locations_description: El negocio tiene múltiples oficinas o centros de gestión. Las reservas de material o las actividades son gestionadas por un centro.
     scheduler_start_time: Hora de inicio planificación
@@ -83,21 +86,30 @@ booking_settings:
       allow_different_category: Permitir asignar diferentes categorías
       allow_different_category_description: Permite que a una reserva pueda asignarse un recurso de diferente categoría, por ejemplo un coche de categoría superior
       allow_busy_resource: Permitir asignar recurso ocupado
+      allow_busy_resource_description: Permitir que desde el planning pueda realizarse la asignación de un recurso ocupado a una reserva
+      automatic_resource_assignation: Asignación automática
+      automatic_resource_assignation_description: Realiza la asignación automática de uno de los recursos disponibles al confirmar la reserva
     renting: Gestión de alquileres
     activities: Gestión de actividades o eventos
-    payments_allowed: Configuración de los pagos online (permitidos)
-    deposit: "Permitir paga y señal de la reserva (% sobre el total de la reserva)"
+    deposit_payment_group: Paga y señal
+    total_payment_group: Total
+    deposit: "% de paga y señal sobre el total de la reserva (0 si no se quiere permitir)"
     deposit_description: En el caso de que se quiera permitir recibir una cantidad en concepto de paga y señal, indicar el porcentaje. Utilizar 0 si sólo se desea recibir el pago total.
+    deposit_includes_product_deposit: "El % de paga y señal incluye la fianza"
+    deposit_includes_product_deposit_description: Marque esta opción si desea que el importe de paga y señal se calcule incluyendo la fianza.
+    total_cost_includes_deposit: "El total incluye la fianza"
+    total_cost_includes_deposit_description: Marque esta opción si desea que el importe total de la reserva incluya la fianza.
     allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días
     min_days_description: Permite indicar el número mínimo de días que se puede alquilar un producto
     family: Tipo de producto en alquiler
     family_description: El sistema está preparado para la gestión de determinados negocios en función del producto que alquilan.
-    custom_pickup_return_place: Permitir otros lugares de entrega/recogida
-    custom_pickup_return_place_price: Precio otro lugar de entrega/recogida
+    custom_pickup_return_place: Permitir otros lugares de entrega/devolución
+    custom_pickup_return_place_price: Precio otro lugar de entrega/devolución
     no_pickup_return_timetable: No aplica
-    pickup_return_timetable: Horario entrega/recogida
-    pickup_return_timetable_out_price: Precio entrega/recogida fuera de horas
+    pickup_return_timetable: Horario entrega/devolución
+    pickup_return_timetable_description: Permite indicar el horario de entrega/devolución
+    pickup_return_timetable_out_price: Precio entrega/devolución fuera de horas
     payment: Pago online habilitado
     morning_turns: Mañana
     afternoon_turns: Tarde 
@@ -115,7 +127,7 @@ booking_settings:
     general_group: General
     notifications: Notificaciones
     product_reservation_rates: Proceso de reserva
-    pickup_return_group: Entrega y recogida    
+    pickup_return_group: Entrega y devolución
     payment_group: Pago online
     adwords_group: Adwords
     turns_group: Turnos
@@ -126,18 +138,40 @@ booking_settings:
     item_hold_time_description: Número de horas desde la recepción de la reserva durante las cuales se puede realizar el pago (parcial o total) para confirmar la reserva. Pasado este tiempo no se podrá realizar el pago de la reserva a no ser que se habilite explícitamente para la reserva.
     payment_cadence: Cadencia de pago (en horas)
     payment_cadence_description: Número de horas que han de haber desde la fecha en la que se realiza la reserva hasta la fecha de inicio de la reserva para permitir el pago online. El cliente sólo podrá realizar una solicitud de reserva, pero no confirmarla.
-    activities_request_reservation: Permitir solicitar reserva    
-    activities_payment: Permitir pago online
-    activities_deposit: "% depósito"
-    activities_allow_deposit_payment: Permitir el pago del depósito
+    activities_item_hold_time: Caducidad del pedido (en horas)
+    activities_item_hold_time_description: Número de horas desde la recepción del pedido durante las cuales se puede realizar el pago (parcial o total) para confirmarlo. Pasado este tiempo no se podrá realizar el pago del pedido a no ser que se habilite explícitamente para el pedido.
+    activities_request_reservation: Permitir realizar sólo solicitud (sin pago online)
+    activities_request_reservation_description: Permite realizar sólo la solicitud de una actividad sin tener que realizar el pago online. Permite captar la solicitud del cliente y disponer de sus datos de contacto.
+    activities_payment: Pago online habilitado
+    activities_deposit: "% de paga y señal sobre el total de la reserva (0 si no se quiere permitir)"
+    activities_allow_deposit_payment: Permitir el pago de la paga y señal
     activities_allow_total_payment: Permitir el pago total del pedido
     activities_item_hold_time: Caducidad (en horas) del pedido
-    activities_payment_cadence: Cadencia de pago
+    activities_payment_cadence: Cadencia de pago (en horas)
+    activities_payment_cadence_description: Número de horas que han de haber desde la fecha en la que se realiza el pedido hasta la fecha de inicio de la actividad para permitir el pago online. Pasado este tiempo no se podrá realizar el pago del pedido a no ser que se habilite explícitamente para el pedido.
     adwords_active: Conversión adwords
     booking_request_conversion_id: Solicitud reserva conversion_id 
     booking_request_conversion_label: Solicitud reserva conversion_label
     booking_pay_now_conversion_id: Pago online reserva conversion_id
     booking_pay_now_conversion_label: Pago online reserva conversion_label
+    driver_min_age_title: Conductor joven
+    driver_min_age_rules: Política (limitaciones/suplementos) para conductores jóvenes
+    driver_min_age_reservation_rule: Regla para el formulario de reserva
+    driver_min_age_rules_description: Permite indicar si la empresa tiene una política con limitaciones para los conductores jóvenes. En caso de no tenerla desactivar la opción.
+    driver_min_age_rules_description: Existe una política en la empresa para los conductores jóvenes, ya sea imposibilidad de alquilar, suplemento o fianza
+    driver_min_age_description: Un conductor se considera joven si su edad es inferior
+    driver_min_age: Edad mínima del conductor
+    driver_min_age_allowed: Permite realizar reserva si es un conductor joven
+    driver_min_age_description: Edad mínima del conductor para considerarlo conductor joven
+    driver_min_age_driving_license_years_min: Años de carnet mínimo (0 si no se tiene en cuenta)
+    driver_min_age_driving_license_years_min_description: Si el conductor es menor de la edad establecida, permite añadir un segundo control sobre los años de carnet mínimos para considerarse conductor joven. Si el tiempo es inferior a esta cantidad no podrá alquilar.
+    driver_min_age_cost: Suplemento conductor joven (por día)
+    driver_min_age_cost_description: Importe del suplemento que se ha de pagar por conductor joven
+    driver_min_age_cost_title: Suplemento por conductor joven
+    driver_min_age_deposit_title: Fianza por conductor joven
+    driver_min_age_driving_license_years_max: Número de años carnet conducir pago fianza
+    driver_min_age_driving_license_years_max_description: Número de años carnet conducir pago fianza
+    driver_min_age_driving_license_years_deposit: Importe fianza
 booking_rates:
   title: Tarifas    
   seasons: Temporadas
@@ -160,7 +194,7 @@ booking_rates_summary:
       n: \%1 días
     edit_prices: Editar precios    
 booking_console:
-  title: Entregas y recogidas
+  title: Entregas y devoluciones
   configuration: Configuración
   products: Productos
   activities: Actividades
@@ -196,7 +230,7 @@ booking_console:
   new_customer_booking: Nueva reserva de cliente
   availability: Calendarios
   summary: Resumen
-  pickup_return: Entrega y recogida
+  pickup_return: Entrega y devolución
   places: Lugares
   create_rates: Preparar tarifas
   adjust_prices: Ajustes masivos precios    
@@ -208,7 +242,7 @@ booking_console:
   information_requests: Solicitudes información
   report_pending_confirmation: Pendientes conf.
   report_in_progress: En curso
-  report_pickup_return: Entregas y recogidas
+  report_pickup_return: Entregas y devoluciones
   report_stock: Stock
   report_reservations: Reservas
   report_resource_reservations: Reservas por recurso
@@ -255,7 +289,7 @@ booking_list:
   days: Días
   rental_location: Oficina
   pickup_count: Número de entregas
-  return_count: Número de recogidas
+  return_count: Número de devoluciones
 booking_status:
   pending_confirmation: Pendiente
   confirmed: Confirmado
@@ -282,6 +316,7 @@ new_booking_restaurant:
   time_mandatory: Hora obligatoria
   people_mandatory: Personas obligatorio
 new_booking:
+  driver_age: Edad del conductor
   title: Reserva
   search_title: Buscar %1
   search: Ver precios
@@ -344,10 +379,11 @@ new_booking:
   day: Día
   days: Días
   time_from_cost: Suplemento entrega fuera de horas
-  time_to_cost: Suplemento recogida fuera de horas
+  time_to_cost: Suplemento devolución fuera de horas
   pickup_place_cost: Suplemento lugar de entrega
-  return_place_cost: Suplemento lugar de recogida
-  product_deposit_cost: Fianza
+  return_place_cost: Suplemento lugar de devolución
+  driver_age_cost: Suplemento edad y años de carnet del conductor
+  product_deposit_cost: Fianza de producto
   product_deposit_cost_legend: La fianza se devuelve al retornar el producto
   total: Total
   form_errors:
@@ -449,6 +485,7 @@ new_booking:
     required: Debe seleccionar la forma de pago
   offer: Oferta
   offer_budget: Descuento
+  driver_age_deposit: Fianza edad conductor
 new_driving_booking:
   driver:
     label: Conductor
@@ -500,9 +537,9 @@ new_driving_booking:
   pickup_place_required: El lugar de entrega es obligatorio
   return_place_required: El lugar de devolución es obligatorio
 booking_management_edit:
-  title: Modificación entrega/recogida
+  title: Modificación entrega/devolución
   description: >
-               <p>Desde aquí puede cambiar la fecha de entrega/recogida.</p>
+               <p>Desde aquí puede cambiar la fecha de entrega/devolución.</p>
                <p>El cambio puede suponer el <em>recálculo del precio de la reserva</em>, aunque podrá
                ajustarlo antes de confirmar los cambios</p>
   form:
@@ -618,7 +655,7 @@ booking_management:
     total_cost: Precio total 
     total_paid: Pagado
     total_pending: Pendiente   
-    booking_amount: Importe depósito
+    booking_amount: Importe paga y señal (recomendado)
     deposit_state: Info. depósito 
     comments: Comentarios    
     notifications:
@@ -682,7 +719,7 @@ booking_management:
     unlink_booking_button_message: ¿Está seguro que desea desvincular la reserva?
     main_booking: Grupo de reservas
     main_booking_search: Buscar reserva principal
-    related_bookings: Entrega/Recogida
+    related_bookings: Entrega/Devolución
     charges: Pagos recibidos
     no_charges: No se ha recibido ningún pago
     commercial_agent: Comercial
@@ -977,7 +1014,7 @@ booking_item_management:
     assignable:
       label: Asignable
 booking_places_definition_management:
-  title: Lugares entrega y recogida
+  title: Lugares entrega y devolución
   table:
     id: Id
     name: Nombre
@@ -992,7 +1029,7 @@ booking_places_management:
     id: Id
     name: Nombre
     is_pickup: Lugar de entrega
-    is_return: Lugar de recogida
+    is_return: Lugar de devolución
     price: Precio
     rental_location: Oficina de gestión
   form:
@@ -1195,8 +1232,8 @@ booking_activity_management:
     step_tickets: Venta de tickets en múltiplos
     duration_days: Duración en días
     duration_hours: Duración en horas
-    custom_pickup_places: Permite indicar lugares de recogida de clientes
-    pickup_places: Lugares de recogida de clientes
+    custom_pickup_places: Permite indicar lugares de devolución de clientes
+    pickup_places: Lugares de devolución de clientes
     occurrence: Frecuencia
     occurrence_one_time: Una vez (determinada por la empresa)
     occurrence_multiple_dates: Múltiples fechas (determinadas por la empresa)
@@ -1248,12 +1285,12 @@ activity:
   evenings: Noches
   dates: Seleccionar la fecha
   turns: Seleccionar el horario
-  pickup_place: Seleccionar lugar de recogida
-  choose_pickup_place: Seleccionar lugar de recogida
+  pickup_place: Seleccionar lugar de entrega
+  choose_pickup_place: Seleccionar lugar de entrega
   tickets: Seleccionar los tickets
   choose_tickets: Número de tickets (%1)
   event_date: Fecha
-  no_pickup_place_selected: No ha seleccionado el lugar de recogida
+  no_pickup_place_selected: No ha seleccionado el lugar de entrega
   no_ticket_selected: No ha seleccionado tickets
   activity_not_available: Lo sentimos, no hay plazas disponibles. Por favor, consulte telefónicamente.
   activity_not_available_dates: Lo sentimos, no hay plazas disponibles en esta fecha. Por favor, consulte telefónicamente.
@@ -1341,6 +1378,7 @@ front_end_reservation:
   return_place: Lugar de devolución
   date_to: Fecha de devolución
   time_to: Hora de devolución
+  driver_age: Edad del conductor
 admin_new_reservation:
   title: Nueva reserva
   description: Desde aquí puede registrar una nueva reserva de cliente
@@ -1377,6 +1415,9 @@ admin_new_reservation:
     time_to_cost: Suplemento hora devolución
     return_place_cost: Suplemento lugar de devolución
     driver_age_cost: Suplemento edad del conductor
+    product_deposit_cost: Fianza producto
+    driver_age_deposit: Fianza edad del conductor
+    total_deposit: Fianza total
     total_cost: TOTAL
   errors:
     error_searching: Error realizando la búsqueda
