--- a/i18n/it.yml
+++ b/i18n/it.yml
@@ -1,38 +1,74 @@
 front_end_reservation:
-  choose_product_page_title: Seleccionar producto
-  choose_products_page_title: Seleccionar productos
-  complete_reservation_page_title: Completar datos
-  summary_page_title: Reserva %1
-  search_title: Buscar
-  search_button: Buscar
-  pickup_place: Lugar de entrega
-  date_from: Fecha de entrega
-  time_from: Hora de entrega
-  return_place: Lugar de devolución
-  date_to: Fecha de devolución
-  time_to: Hora de devolución
-  driver_age: Edad del conductor
-  update: Actualizar
-  select: Seleccionar
-  next: Siguiente
-  extras_title: Extras
-  customer_title: Información del cliente
-  not_available: No disponible
-  field_customer_name: Nombre
-  field_customer_name_mandatory: El nombre del cliente es obligatorio
-  field_customer_surname: Apellidos
-  field_customer_surname_mandatory: Los apellidos del cliente son obligatorios
-  field_customer_email: Correo electrónico
-  field_customer_email_mandatory: El correo electrónico del cliente es obligatorio
-  field_customer_email_confirm: Confirmar correo electrónico
-  field_customer_main_phone_number: Teléfono principal
-  field_customer_alternative_phone_number: Teléfono alternativo
-  additional_information_title: Información adicional
-  field_comments: Comentarios
-  conditions_read: He leído y acepto las <a href="/renting_conditions" target="blank">condiciones</a> del alquiler
-  request_reservation: Solicitar reserva
+  home: Inicio
+  conditions: Condizioni
+  choose_product_page_title: Selezionare prodotto
+  choose_products_page_title: Selezionare produrre
+  complete_reservation_page_title: Completare i dati
+  summary_page_title: Prenotazione %1
+  search_title: Cerca
+  search_button: Cerca
+  pickup_place: Luogo ritiro
+  date_from: Data ritiro
+  time_from: Ora ritiro
+  return_place: Luogo riconsegna
+  date_to: Data riconsegna
+  time_to: Ora riconsegna
+  driver_age: L'età del conducente
+  update: Per aggiornarlo
+  product: Prodotto
+  select: Selezionare
+  next: Seguente
+  extras_title: Extra
+  customer_title: Dati del cliente
+  not_available: Non disponibile
+  field_customer_name: Nome
+  field_customer_name_mandatory: The name is mandatory
+  field_customer_surname: Cognome
+  field_customer_surname_mandatory: The surname is mandatory
+  field_customer_email: E-mail
+  field_customer_email_mandatory: The e-mail is mandatory
+  field_customer_email_confirm: Confermare e-mail
+  field_customer_main_phone_number: Telefono
+  field_customer_alternative_phone_number: Telefono alternativo
+  additional_information_title: Ulteriori informazioni
+  field_comments: Commenti
+  payment_title: Pagamento
+  payment_to_confirm_reservation: Per confermare la prenotazione è necessario effettuare un pagamento pari al %1% del costo totale della prenotazione
+  conditions_read: Ho letto e accetto <a href="%1" target="blank">i termini e le condizioni generali di noleggio</a>
+  request_reservation: Effettuare la prenotazione
+  credit_card_payment: Credit card (a deposit of %1% is required to confirm the reservation)
+  paypal_payment: PayPal (a deposit of %1% is required to confirm the reservation)
   conditions_not_read: Lo sentimos. No ha marcado que ha leído las condiciones de alquiler
   form_errors: Por favor, revise el formulario. Contiene datos no válidos.
-  product_information_title: Información del producto
-  products_information_title: Información de los productos
-  reservation_detail_title: Detalle de la reserva
+  product_information_title: Informazioni sul prodotto
+  products_information_title: Informazioni sul produrre
+  reservation_summary_title: Dettagli sulla prenotazione
+  reservation_summary_pickup: Ritiro
+  reservation_summary_return: Riconsegna
+  reservation_summary_price: Prezzo
+  reservation_summary_total_product: Totale prodotto
+  reservation_summary_total_extras: Totale extra
+  reservation_summary_pickup_place_supplement: Pick up place supplement
+  reservation_summary_pickup_time_supplement: Pick up time supplement
+  reservation_summary_return_place_supplement: Return place supplement
+  reservation_summary_return_time_supplement: Return time supplement
+  reservation_summary_total: Totale
+  reservation_summary_deposit: Deposit
+  reservation_summary_deposit_detail: La fianza se devolverá tras las devolución del producto
+  modify_reservation: Modify reservation
+  booking_detail_title: la sua prenotazione %1
+  booking_detail_state:
+    pending_confirmation: non è stata ancora confermata
+    confirming: is being confirmed
+    confirmed: è confermata
+    in_progress: is in progress
+    done: is finished
+    cancelled: has been canceled
+  booking_detail_product_title: Prodotto
+  booking_detail_extras_title: Extra
+  booking_detail_customer_title: Dati del cliente
+  booking_detail_customer_name: Nome
+  booking_detail_customer_phone_number: Numeri di telefono
+  booking_detail_customer_email: E-mail
+  booking_detail_summary_paid: Pagato
+  booking_detail_summary_pending: Da pagare
